# test01

./: Jenkinsfile  ReadMe.md  ShortTermPlanning.py  agent.py  agentsPage.py  auction.py  clean_kafka.py  common.py  config.cnf  functions.py  log.py  material.py  pyproject.toml  requirements_local.txt  resource.py
data/: __init__.py  data_functions.py  data_setup.py  load_url.py  site.json  snapshot_2024-12-31T00_00.csv  test.py
