[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dynreact_shorterm"
version = "0.0.1"
#authors = [
#  { name="Example Author", email="author@example.com" },
#]
description = "The DynReAct ShortTerm scheduling package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/DynReAct/OSS_Platform"
Issues = "https://github.com/DynReAct/OSS_Platform/issues"

# See https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#setuptools-specific-configuration
[tool.setuptools]
packages = ["dynreact.shortterm"]
package-dir = {"" = "."}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements_local.txt"]}
